--- a/todo.org
+++ b/todo.org
@@ -7,3 +7,5 @@
 * run cmd
 sudo docker run --name tefa -d --net=host --env="DISPLAY" --volume="$HOME/.Xauthority:/root/.Xauthority:rw" -v `pwd`:/mnt/data/ mytefa
 sudo docker start tefa
+** configurations
+config = { ('annotator1', 35), ('annotator2', 15), ('annotator3', 100), ('small', 0.1)}
